opam-version: "2.0"
version: "0.1.0"
synopsis: "OCaml types for Reddit's API"
maintainer: ["levimroth@gmail.com"]
authors: ["Levi Roth"]
license: "MIT"
homepage: "https://github.com/leviroth/reddit_api"
bug-reports: "https://github.com/leviroth/reddit_api/issues"
depends: [
  "odoc" {with-doc}
  "dune" {>= "2.0" & build}
  "cohttp" {>= "2.5.4"}
  "core_kernel" {= "v0.14.0"}
  "ezjsonm" {>= "1.0"}
]
build: [
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/leviroth/reddit_api.git"
